--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       @import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&display=swap");
     </style>
   </head>
-  <body class="container min-h-screen ">
+  <body class="container min-h-screen max-w-[1400px] ">
     <div
       id="root"
       class="relative min-h-screen flex gap-[20px] p-0 flex-col"
